# nomeolvides

./: .anjuta_sym_db.db  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  configure.ac
.anjuta/session/: anjuta.session  dock-layout.xml
data/: nomeolvides.desktop
src/: Makefile.am  hecho.vala  hechos.json  hechos2.json  main.vala  nomeolvides-add-dialog.vala  nomeolvides-add-fuente-dialog.vala  nomeolvides-add-hecho-dialog.vala  nomeolvides-app-menu.ui  nomeolvides-app.vala  nomeolvides-borrar-fuente-dialogo.vala  nomeolvides-borrar-hecho-dialogo.vala  nomeolvides-dialogo-hecho.vala  nomeolvides-edit-dialog.vala  nomeolvides-edit-fuente-dialog.vala  nomeolvides-edit-hecho-dialog.vala  nomeolvides-fuente.vala  nomeolvides-fuentes-dialog.vala  nomeolvides-hecho.vala  nomeolvides-hechos-fuentes.vala  nomeolvides-lista-hechos.vala  nomeolvides-liststore-fuentes.vala  nomeolvides-liststore-hechos.vala  nomeolvides-main-toolbar.vala  nomeolvides-main.vala  nomeolvides-openfile-dialog.vala  nomeolvides-panel.vala  nomeolvides-savefile-dialog.vala  nomeolvides-selector-fecha.vala  nomeolvides-text-view-hecho.vala  nomeolvides-toolbar.vala  nomeolvides-treeview-anios.vala  nomeolvides-treeview-fuentes.vala  nomeolvides-treeview-selector.vala  nomeolvides-treeview.vala  nomeolvides-view-anios.vala  nomeolvides-view-hechos.vala  nomeolvides-vista-hecho.vala  nomeolvides-window.vala  nomeolvides.ui  (+3 more)
